# py-cloudops

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/kong/: kong.yml
infra/postgres/init/: 01-databases.sql
infra/rabbitmq/: definitions.json  rabbitmq.conf
libs/cloudops-core/: pyproject.toml
libs/cloudops-core/src/cloudops_core/: __init__.py  amqp.py  db.py  envelope.py  idempotency.py  logging.py  outbox.py
libs/cloudops-core/tests/: test_amqp.py  test_envelope.py  test_idempotency.py  test_logging.py  test_outbox.py
scripts/: demo-happy-path.sh
services/api-ingress/: Dockerfile  pyproject.toml
services/api-ingress/src/api_ingress/: main.py  publisher.py  schemas.py
services/api-ingress/tests/: test_schemas.py
services/audit/: Dockerfile  pyproject.toml
services/audit/src/audit/: main.py  store.py
services/audit/tests/: test_store.py
services/catalog/: Dockerfile  alembic.ini  pyproject.toml
services/catalog/alembic/: env.py
services/catalog/alembic/versions/: 0001_initial.py
services/catalog/src/catalog/: db.py  handlers.py  main.py  models.py
services/catalog/tests/: test_handlers.py
services/orchestrator/: Dockerfile  alembic.ini  pyproject.toml
services/orchestrator/alembic/: env.py
services/orchestrator/alembic/versions/: 0001_initial.py
services/orchestrator/src/orchestrator/: db.py  main.py  models.py  outbox_publisher.py  saga_definitions.py  state_machine.py
services/orchestrator/tests/: test_state_machine.py
services/provisioning/: Dockerfile  alembic.ini  pyproject.toml
services/provisioning/alembic/: env.py
services/provisioning/alembic/versions/: 0001_initial.py
services/provisioning/src/provisioning/: aws_client.py  db.py  main.py  models.py
services/provisioning/src/provisioning/handlers/: s3.py
services/provisioning/tests/: test_s3_handler.py
tests/integration/: conftest.py  test_s3_happy_path.py
