[project]
name = "cloudops-core"
version = "0.1.0"
description = "Shared building blocks for cloudops services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "aio-pika>=9.4",
    "structlog>=24.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudops_core"]
