[project]
name = "api-ingress"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloudops-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "aio-pika>=9.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_ingress"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires running infrastructure"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
