[project]
name = "audit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloudops-core",
    "motor>=3.4",
    "aio-pika>=9.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mongomock-motor>=0.0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires running infrastructure"]
