[project]
name = "provisioning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloudops-core",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aio-pika>=9.4",
    "boto3>=1.34",
    "pydantic>=2.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "aiosqlite>=0.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provisioning"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires running infrastructure"]
